--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -26,6 +26,7 @@ span {
     font-size: 1.0rem;
     margin-left: 2%;
     color: #8D9AA4;
+    /* margin-right: -85% */
 }
 
 h3 {
@@ -53,3 +54,13 @@ h3 {
 .Content {
     margin-left: 1%
 }
+
+/* .header-content {
+    position: absolute;
+    margin-top: 2%;
+    margin-left: 4%;
+} */
+
+/* .ImageThumbnail, .HeaderContainer {
+    position: relative;
+} */
